=== and the other UPGRADE files for older releases.
===
==============================================================================
------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.1.0 to Asterisk 13.1-cert1 --------
------------------------------------------------------------------------------

chan_pjsip
------------------
 * New 'user_eq_phone' endpoint setting. This adds a 'user=phone' parameter
   to the request URI and From URI if the user is determined to be a phone number.

 * New global setting 'keep_alive_interval'. Setting this to a non-zero value
   will cause keep alive messages to be sent periodically over connection
   oriented transports.

ARI
------------------
 * The Originate operation now takes in an originator channel. The linked ID of
   this originator channel is applied to the newly originated outgoing channel.
   If using CEL this allows an association to be established between the two so
   it can be recognized that the originator is dialing the originated channel.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.0.0 to Asterisk 13.1.0 ------------
------------------------------------------------------------------------------

AMI
------------------
 * Event NewConnectedLine is emitted when the connected line information on
   a channel changes.

 * The version of AMI has been bumped to 2.6.0 to account for the backwards
   compatible feature listed above.

ARI
------------------
 * Event ChannelConnectedLine is emitted when the connected line information
   on a channel changes.

 * The version of ARI has been bumped to 1.6.0 to account for the backwards
   compatible feature listed above.

Core Transfers
-----------------

The features.conf general section has three new configurable options:
    * transferdialattempts
	* transferretrysound
	* transferinvalidsound